Demo_7/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: nginx
  namespace: nginx
spec:
  rules:
  - host: ppi-demo.westeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 80
        path: /hello
        pathType: Prefix
  tls:
  - hosts:
    - ppi-demo.westeurope.cloudapp.azure.com
